--- a/asset/style.css
+++ b/asset/style.css
@@ -1,11 +1,18 @@
+
+body {
+    height: 100%;
+    margin: 0 auto;
+}
 .title {
     text-align: center;
 }
 
 .navSection {
     background: rgb(54,96,81);
-    height: 40px;
+    height: 30px;
     border-bottom: 10px solid rgb(228,207,193);
+    text-align: right;
+    padding: 10px
 }
 #hero {
     position: relative;
@@ -56,7 +63,7 @@
 .contactMe {
     background: rgb(228,207,193);
     text-align: center;
-
+    padding: 10px;
 }
 
 p {
@@ -64,4 +71,29 @@ p {
 }
 footer {
     background: rgb(54,96,81);
+    text-align: center;
+    color: white;
+    padding: 10px;
 }
+
+button {
+    width: 80px;
+    background: rgb(79,72,70);
+    color: white;
+}
+
+.styledForm {
+    width:200px;
+    margin: 0 auto;
+    border: 5px solid rgb(214,177,152);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.navElements {
+    display: inline;
+    color: white;
+    text-decoration: none;
+    font-family: sans-serif;
+}
+
